2010-05-04  Dan Nicolaescu  <dann@ics.uci.edu>

	Remove POSIX_SIGNALS.
	* s/usg5-4.h (POSIX_SIGNALS):
	* s/netbsd.h (POSIX_SIGNALS):
	* s/msdos.h (POSIX_SIGNALS):
	* s/ms-w32.h (POSIX_SIGNALS):
	* s/hpux11.h (POSIX_SIGNALS):
	* s/gnu.h (POSIX_SIGNALS):
	* s/gnu-linux.h (POSIX_SIGNALS):
	* s/freebsd.h (POSIX_SIGNALS):
	* s/darwin.h (POSIX_SIGNALS):
	* s/cygwin.h (POSIX_SIGNALS):
	* s/aix4-2.h (POSIX_SIGNALS): Remove definition.
	* s/unixware.h:
	* s/sol2-6.h: Remove comments on POSIX_SIGNALS.
	* process.c (create_process):
	* syssignal.h:
	* sysdep.c (wait_for_termination, init_signals):
	* process.c (create_process):
	* msdos.c: POSIX_SIGNALS is always defined on all platforms,
	remove all code that assumes the contrary.

2010-05-04  Glenn Morris  <rgm@gnu.org>

	* s/gnu-linux.h (LD_SWITCH_SYSTEM): Use LD_SWITCH_X_SITE_AUX as a shell
	variable.
	* s/netbsd.h (LD_SWITCH_SYSTEM_tmp): Remove.
	(LD_SWITCH_SYSTEM): Use $LD_SWITCH_X_SITE_AUX_RPATH.
	* s/openbsd.h (LD_SWITCH_SYSTEM_tmp): Remove.
	(LD_SWITCH_SYSTEM): Use $LD_SWITCH_X_SITE_AUX_RPATH instead of
	LD_SWITCH_SYSTEM_tmp.
	* Makefile.in (LD_SWITCH_X_SITE_AUX, LD_SWITCH_X_SITE_AUX_RPATH):
	New variables, set by configure.

	* s/aix4-2.h (LD_SWITCH_SYSTEM_TEMACS): Move to configure.in.
	* s/darwin.h (HEADERPAD_EXTRA, LIBS_NSGUI): Remove.
	(LD_SWITCH_SYSTEM_TEMACS): Move to configure.in.
	* Makefile.in (LD_SWITCH_SYSTEM_TEMACS): New variable, set by configure.
	(TEMACS_LDFLAGS): Use $LD_SWITCH_SYSTEM_TEMACS.

	* s/aix4-2.h (C_SWITCH_SYSTEM):
	* m/alpha.h (C_SWITCH_MACHINE):
	Move to configure.in.
	* Makefile.in (C_SWITCH_MACHINE, C_SWITCH_SYSTEM):
	New variables, set by configure.
	(ALL_CFLAGS): Use $C_SWITCH_MACHINE and $C_SWITCH_SYSTEM in place of
	$c_switch_machine and $c_switch_system.

2010-05-04  Dan Nicolaescu  <dann@ics.uci.edu>

	* s/hpux10-20.h (LIB_STANDARD): New definition.
	* Makefile.in (ORDINARY_LINK): Remove setting LIB_STANDARD based
	on it, not used anymore.
